* 2014-11-10 - thorben.betten@open-xchange.com

 - Fix for bug 35141: Do not require administrator credentials in case "MASTER_AUTHENTICATION_DISABLED" is set to true

* 2014-11-07 - thorben.betten@open-xchange.com

 - Fix for bug 35373: Only add transport properties if transport data has been set/inserted before

* 2014-11-06 - thorben.betten@open-xchange.com

 - Fix for bug 35374: Pass incoming request's IP address on redeem token call
 - Fix for bug 35359: Improved special /ajax/mail?action=all request fired when loading portal page

* 2014-11-05 - thorben.betten@open-xchange.com

 - Fix for bug 35139: Allow "data" URI scheme in <img> src attribute
 - Fix for bug 35348: Drop weird attributes from start tags that break HTML parsing and added <center> tag to white-list

* 2014-11-03 - thorben.betten@open-xchange.com

 - Fix for bug 35291: Obey forbidden end tags when generating conform/well-formed HTML content
 - Fix for bug 34979: Honor "setFrom" parameter when composing forward message

* 2014-10-31 - thorben.betten@open-xchange.com

 - Fix for bug 35267: Explicitly specify header encoding when parsing multipart/form-upload requests with Apache FileUpload

* 2014-10-30 - marcus.klein@open-xchange.com

 - Fix for bug 34981: Corrected post installation script for property com.openexchange.sessiond.remoteParameterNames in sessiond.properties
   configuration file.

* 2014-10-30 - thorben.betten@open-xchange.com

 - Fix for bug 35242: Added null guard & improved logging behavior to provide mail information in order to identify the mail later on

* 2014-10-29 - martin.schneider@open-xchange.com

 - Fix for bug 35073: set default subject when processed mail was sent without subject
 - Fix for bug 34894: set default subject when processed mail was sent without subject

* 2014-10-29 - thorben.betten@open-xchange.com

 - Fix for bug 35255: Also consider file extension if mail part claims to be HTML by Content-Type

* 2014-10-27 - marc.arens@open-xchange.com
