@@ -1,6 +1,7 @@
 * 2014-11-10 - thorben.betten@open-xchange.com
 
  - Fix for bug 35141: Do not require administrator credentials in case "MASTER_AUTHENTICATION_DISABLED" is set to true
+ - Fix for bug 35392: Added class guard when examining a cache event
 
 * 2014-11-07 - thorben.betten@open-xchange.com
 
